<resources>
    <string name="app_name">CheckList</string>
    <string name="title_activity_create_task">CreateTaskActivity</string>
    <string name="title_activity_main">CheckList</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="HintTaskDescription">Task</string>
    <string name="buttonCancelText">Cancel</string>
    <string name="buttonAcceptText">Accept</string>
    <string name="delete_all_entries">Delete all Entries</string>
    <string name="create_new_entry">Create new Entry</string>
    <string name="restore">restore</string>
    <string name="settings">Settings</string>
    <string name="export">Export</string>
    <string name="undo_max_length">max history length</string>
    <string name="undo">Undo</string>
    <string name="title_activity_settings">Settings</string>
    <string name="switchTrackCreateTitle">create Task</string>
    <string name="switchTrackDeleteTitle">delete Task</string>
    <string name="switchTrackMoveTitle">move Task</string>
    <string name="switchTrackRenameTitle">rename Task</string>
    <string name="trackActivitiesTitle">Track Activities</string>
    <string name="maxHistorySizeTitle">Max history size</string>
    <string name="title_activity_create_category">CreateCategory</string>
    <string name="add_category">add new category</string>
    <string name="category_icon_description">Category icon</string>
    <string name="HintCategoryName">Category name</string>
    <string name="browseIconButtonText">Select Icon</string>
    <string name="categoryIconDescription">category icon</string>
    <string name="categoriesTitle">Categories</string>
    <string name="pruneButtonText">cleanup</string>
    <string name="title_activity_edit_category">EditCategory</string>
    <string name="title_settings_button">Settings</string>
    <string name="button_add_list">Add List</string>
    <string name="button_export_md">Export .md</string>
    <string name="text_input_hint_ListName">List name</string>
    <string name="title_activity_edit_checklist">EditCheckList</string>
    <string name="title_activity_done_tasks">DoneTasks</string>
    <string name="button_import_md">Import .md</string>
    <string name="importTitle">Import</string>
    <string name="switchTrackSkipTitle">skip duplicate Tasks</string>
    <string name="button_delete_task">delete Task</string>
    <string name="button_edit_list">Edit List</string>
    <string name="track_tasks_done_title">Remember completed Tasks</string>
    <string name="button_todo">mark todo</string>
    <string name="button_back_to_todo">back to tasks</string>
    <string name="button_done_tasks">show done tasks</string>
    <string name="button_menu">menu</string>
    <string name="textCompleted">Completed</string>
    <string name="button_delete_list">Delete List</string>
    <string name="filterCategoriesTitle">filter Categories</string>
</resources>