<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editListRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kryptonbutterfly.checklist.EditListActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/listName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_input_hint_ListName"
            android:includeFontPadding="false"
            android:inputType="textAutoCorrect|textMultiLine"
            android:minHeight="48dp"
            android:paddingHorizontal="12dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="24dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/trackDoneSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:minHeight="48dp"
            android:text="@string/track_tasks_done_title"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@id/trackDoneSwitch"
            tools:layout_editor_absoluteX="24dp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/filterCategoriesSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:minHeight="48dp"
            android:onClick="onToggleFilterCategories"
            android:text="@string/filterCategoriesTitle"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/view2"
            tools:layout_editor_absoluteX="24dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filterCategoriesSwitch"
            tools:ignore="SpeakableTextPresentCheck">

            <LinearLayout
                android:id="@+id/categoriesFilterList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical">
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/backgroundColor"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            android:onClick="onCancel"
            android:text="@string/buttonCancelText"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3" />

        <Button
            android:id="@+id/buttonEditListAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            android:enabled="false"
            android:onClick="onApply"
            android:text="@string/buttonAcceptText"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>